add chart container, button

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
   </head>
   <body>
     <h1>VERY VERY SPECIAL AND UNIQUE BAR CHART</h1>
-    <canvas id="myCanvas" width="600" height="600"></canvas>
+    <!-- <canvas id="myCanvas" width="600" height="600">
+      <button type="button">Click Me!</button> 
+    </canvas> -->
+    <div id = "container">
+      <div id = "vertical-center">
+        <div id = "text">Please enter data in JS object format.</div>
+        <button>Centered Button</button>
+        <script>
+          //var parentOffset = $('#container').offset();
+          let offsetContainer = [document.getElementById("container").offsetTop, document.getElementById("container").offsetLeft];
+          console.log(offsetContainer);
+          </script>
+      </div>
+    </div>
     <script>
-      var canvas = document.getElementById("myCanvas");
-      var ctx = canvas.getContext("2d");
-      ctx.fillStyle = "#FF0000";
-      ctx.fillRect(0, 0, 600, 600);
+
+      //var canvas = document.getElementById("myCanvas");
+      //var ctx = canvas.getContext("2d");
+      //ctx.fillStyle = "#FF0000";
+      //ctx.fillRect(0, 0, 600, 600);
+
     </script>
   </body>
 </html>
