--- a/index.html
+++ b/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" > 
     <meta charset="utf-8">
   </head>
   <body>
     <h1>VERY VERY SPECIAL AND UNIQUE BAR CHART</h1>
     <div id = "container">
       <canvas id = "chart"></canvas>
-      <div id = "text">Please enter data in JS object format.<br>Example: {asdasd}</div>
+      <div id = "text">Please enter data in JS object format.<br>Example: {"apple":4, "grape":7, "orange":5}</div>
       <form id = "dataForm">
-        <textarea></textarea>
+        <textarea id = "dataInput"></textarea>
       </form>
       <button id = "btn">Get Chart!</button>
     </div>
     <script>
-      let container = document.getElementById("container");
+      //let container = document.getElementById("container");
       let button = document.getElementById("btn");
       let text = document.getElementById("text");
       let form = document.getElementById("dataForm");
+      let dataInput = document.getElementById("dataInput");
+      let canvas = document.getElementById("chart");
+
+      let data;
 
       button.addEventListener("click", function() {
-        let canvas = document.getElementById("chart");
+        try{
+          data = JSON.parse(dataInput.value);
+          hideElements();
+          drawChart();
+        }catch (err){text.textContent = "Invalid format!"}
+
+        console.log(data);
+      });
+
+      function hideElements(){
+        button.style.display = "none"
+        text.style.display = "none"
+        form.style.display = "none"
+      }
+
+      function drawChart(){
         let ctx = canvas.getContext("2d");
         ctx.fillStyle = "#FF0000";
         ctx.fillRect(0, 0, 600, 600);
-      }); 
+      }
 
     </script>
   </body>
