--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" > 
     <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"> 
+    <link href="/ball.png" rel="icon" type="image/png">
   </head>
   <body>
-    <h1>VERY VERY SPECIAL AND UNIQUE BAR CHART</h1>
+    <h1></h1>
     <div id = "container">
-      <canvas id = "chart"></canvas>
-      <div id = "text">Please enter data in JS object format.<br>Example: {"apple":4, "grape":7, "orange":5}</div>
+      <canvas id = "myCanvas"></canvas>
+      <div id = "message"></div>
       <form id = "dataForm">
-        <textarea id = "dataInput">{"apple":4, "grape":7, "orange":5}</textarea>
+        <textarea id = "textarea"></textarea>
       </form>
-      <button id = "btn">Get Chart!</button>
+      <button id = "btn"></button>
     </div>
-    <script src="drawChart.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
