--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <form id = "dataForm">
         <textarea id = "textarea"></textarea>
       </form>
-      <button id = "btn"></button>
+      <button id = "getChartBtn"></button>
     </div>
+    <button id = "resetBtn"></button>
     <script src="main.js" type="module"></script>
   </body>
 </html>
