--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
       </form>
       <button id = "getChartBtn"></button>
     </div>
+    <div id = "options">
+      <select name="cars1">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
+        <option value="audi">Audi</option>
+      </select>
+
+      <select name="cars2">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
+        <option value="audi">Audi</option>
+      </select>
+    </div>
+
     <button id = "resetBtn"></button>
     <script src="main.js" type="module"></script>
   </body>
