--- a/index.html
+++ b/index.html
@@ -17,21 +17,31 @@
       <button id = "getChartBtn"></button>
     </div>
     <div id = "options">
-      <select name="cars1">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="opel">Opel</option>
-        <option value="audi">Audi</option>
+      <select id = "barColour" required>
+        <option selected disabled>Select Bar colour...</option>
+        <option value="Red">Red</option>
+        <option value="Orange">Orange</option>
+        <option value="Green">Green</option>
       </select>
-
-      <select name="cars2">
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="opel">Opel</option>
-        <option value="audi">Audi</option>
+      <select id = "barColour" required>
+        <option selected disabled>Select Label colour...</option>
+        <option value="Red">Red</option>
+        <option value="Orange">Orange</option>
+        <option value="Green">Green</option>
+      </select>
+      <select id = "barColour" required>
+        <option selected disabled>Select Font size...</option>
+        <option value="10">10</option>
+        <option value="12">12</option>
+        <option value="14">14</option>
+      </select>
+      <select id = "barColour" required>
+        <option selected disabled>Select font colour...</option>
+        <option value="Red">Red</option>
+        <option value="Orange">Orange</option>
+        <option value="Green">Green</option>
       </select>
     </div>
-
     <button id = "resetBtn"></button>
     <script src="main.js" type="module"></script>
   </body>
