--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id = "container">
       <canvas id = "myCanvas"></canvas>
       <div id = "message"></div>
+      <div id = "message2">Example: {"apple":4, "grape":7, "orange":9, "banana":5}</div>
       <form id = "dataForm">
         <textarea id = "textarea"></textarea>
       </form>
@@ -19,24 +20,21 @@
     <div id = "options">
       <select id = "barColour" required>
         <option selected disabled>Select Bar colour...</option>
+        <option value="White">White</option>
         <option value="Red">Red</option>
         <option value="Orange">Orange</option>
         <option value="Green">Green</option>
       </select>
-      <select id = "barColour" required>
+      <select id = "labelColour" required>
         <option selected disabled>Select Label colour...</option>
+        <option value="White">White</option>
         <option value="Red">Red</option>
         <option value="Orange">Orange</option>
         <option value="Green">Green</option>
       </select>
-      <select id = "barColour" required>
-        <option selected disabled>Select Font size...</option>
-        <option value="10">10</option>
-        <option value="12">12</option>
-        <option value="14">14</option>
-      </select>
-      <select id = "barColour" required>
-        <option selected disabled>Select font colour...</option>
+      <select id = "axesColour" required>
+        <option selected disabled>Select axes colour...</option>
+        <option value="White">White</option>
         <option value="Red">Red</option>
         <option value="Orange">Orange</option>
         <option value="Green">Green</option>
